--- a/src/main/resources/static/html/items.html
+++ b/src/main/resources/static/html/items.html
@@ -7,11 +7,12 @@
 <body>
 <div class="container" style="max-width: 600px">
   <div class="py-5 text-center">
-    <h2>상품 목록</h2> </div>
+    <h2>상품 목록</h2>
+  </div>
   <div class="row">
     <div class="col">
-      <button class="btn btn-primary float-end" onclick="location.href='addForm.html'" type="button">상품
-        등록</button> </div>
+      <button class="btn btn-primary float-end" onclick="location.href='addForm.html'" type="button">상품 등록</button>
+    </div>
   </div>
   <hr class="my-4">
   <div>
